--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta name="theme-color" content="#0e0b12" />
   <meta name="color-scheme" content="dark" />
   <title>Queen Mother Maat — Priestess of Ọya | Khemetian Yoga, Breathwork & Guided Meditations</title>
-  <meta name="description" content="Queen Mother Maat — Priestess of Ọya. Master Khemetian Yoga instructor offering guided breathing, meditation, and spiritual alignment sessions. Serving in-person and virtual communities. Email: iya@queenmothermaat.com" />
+  <meta name="description" content="Queen Mother Maat — Priestess of Ọya. Khemetian Yoga instructor offering guided breathing, meditation, and spiritual alignment sessions. Serving in-person and virtual communities. Email: iya@queenmothermaat.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
 
   <!-- Open Graph -->
   <meta property="og:title" content="Queen Mother Maat — Priestess of Ọya" />
-  <meta property="og:description" content="Master Khemetian Yoga • Guided Breathwork • Meditations • Spiritual Alignment" />
+  <meta property="og:description" content=" Khemetian Yoga • Guided Breathwork • Meditations • Spiritual Alignment" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://queenmothermaat.com/" />
   <meta property="og:image" content="https://queenmothermaat.com/og-image.jpg" />
@@ -121,7 +121,7 @@
     "alternateName": "Priestess of Ọya",
     "url": "https://queenmothermaat.com/",
     "email": "mailto:iya@queenmothermaat.com",
-    "jobTitle": "Master Khemetian Yoga Instructor",
+    "jobTitle": "Khemetian Yoga Instructor",
     "knowsAbout": ["Khemetian Yoga","Breathwork","Meditation","Ifá/Òrìṣà","Priestess of Ọya"],
     "sameAs": []
   }
@@ -135,7 +135,7 @@
         <div class="logo" aria-hidden="true">QM</div>
         <div>
           <strong style="font-family:'Libre Baskerville',serif; font-size:1.15rem;">Queen Mother Maat</strong><br>
-          <span class="tiny">Priestess of Ọya • Master Khemetian Yoga</span>
+          <span class="tiny">Priestess of Ọya •  Khemetian Yoga</span>
         </div>
       </div>
       <div style="display:flex; gap:10px; flex-wrap:wrap">
@@ -153,7 +153,7 @@
       <div class="card">
         <span class="pill">Priestess of Ọya • Spiritual Winds, Change & Courage</span>
         <h1>Embodied Breath. Ancient Rhythm. <span style="color:var(--oya)">Ọya</span> at your back.</h1>
-        <p>Queen Mother Maat is a <strong>Master Khemetian Yoga</strong> instructor and <strong>Priestess of Ọya</strong>, guiding clients through breath, movement, and deep meditation to clear stagnation and align purpose. Private, group, and ceremonial sessions offered virtually and in person.</p>
+        <p>Queen Mother Maat is a <strong>   Khemetian Yoga</strong> instructor and <strong>Priestess of Ọya</strong>, guiding clients through breath, movement, and deep meditation to clear stagnation and align purpose. Private, group, and ceremonial sessions offered virtually and in person.</p>
         <div class="cta-row">
           <a class="btn btn-primary" href="mailto:iya@queenmothermaat.com?subject=Booking%20Inquiry&body=Name%3A%0APreferred%20date%2Ftime%3A%0ATimezone%3A%0ASession%20type%3A">Book Breathwork</a>
           <a class="btn btn-ghost" href="#offerings">See Offerings</a>
@@ -216,7 +216,7 @@
           <ul class="list">
             <li><strong>Degrees & Certifications</strong> in natural health and integrative nutrition.</li>
             <li><strong>Commission on Certification (AADP)</strong> recognition.</li>
-            <li><strong>Master Khemetian Yoga Instructor</strong> with years of teaching for breath, posture, and energetic alignment.</li>
+              <strong>Khemtian</strong> Yoga Instructor</strong> with years of teaching for breath, posture, and energetic alignment.</li>
           </ul>
           <p class="tiny">*Full certificate images available below.</p>
         </div>
